--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
             </ul>
             <ul class="sub-links" id="SAD">
                 <li><a href="./SAD/SAD_2076.html">Question Bank 2076</a></li>
-                <li><a href="./SAD/sad_2078.html">Question Bank 2078</a></li>
-                <li><a href="./SAD/sad_2079.html">Question Bank 2079</a></li>
-                <li><a href="./SAD/sad_2080.html">Question Bank 2080</a></li>
-                <!-- <li><a href="./SAD/sad_2024.html">Question Bank 2024</a></li> -->
+                <li><a href="./SAD/SAD_2078.html">Question Bank 2078</a></li>
+                <li><a href="./SAD/SAD_2079.html">Question Bank 2079</a></li>
+                <li><a href="./SAD/SAD_2080.html">Question Bank 2080</a></li>
+                <!-- <li><a href="./SAD/SAD_2024.html">Question Bank 2024</a></li> -->
             </ul>
         </div>
         
